--- a/static/arkicon.css
+++ b/static/arkicon.css
@@ -2,7 +2,7 @@
 @font-face {
     font-family: 'arkicons';
     src: url(https://img3.doubanio.com/f/ark/cd135ac558e3da303f048cc9d3929c4b39701b43/pics/iconic/arkicons.eot);
-    src: url(https://img3.doubanio.com/f/ark/cd135ac558e3da303f048cc9d3929c4b39701b43/pics/iconic/arkicons.eot) format('embedded-opentype'),url(/f/ark/0ba6112e957b22f25727de2b7cd53eec997358c0/pics/iconic/arkicons.woff) format('woff'),url(https://img3.doubanio.com/f/ark/6b2d0cf21792fdb931081afb302b5041fda926e2/pics/iconic/arkicons.ttf) format('truetype'),url(https://img3.doubanio.com/f/ark/ee66497ef90f14ef7a67b31ab067c0ba3ff3e393/pics/iconic/arkicons.svg) format('svg');
+    src: url(https://img3.doubanio.com/f/ark/cd135ac558e3da303f048cc9d3929c4b39701b43/pics/iconic/arkicons.eot) format('embedded-opentype'),url(https://img3.doubanio.com/f/ark/0ba6112e957b22f25727de2b7cd53eec997358c0/pics/iconic/arkicons.woff) format('woff'),url(https://img3.doubanio.com/f/ark/6b2d0cf21792fdb931081afb302b5041fda926e2/pics/iconic/arkicons.ttf) format('truetype'),url(https://img3.doubanio.com/f/ark/ee66497ef90f14ef7a67b31ab067c0ba3ff3e393/pics/iconic/arkicons.svg) format('svg');
     font-weight: normal;
     font-style: normal
 }
